Fix with autosuggest z-index

--- a/fields/autosuggest/src/styles.scss
+++ b/fields/autosuggest/src/styles.scss
@@ -3,6 +3,7 @@
 .container {
     .autosuggest {
         position: relative;
+        z-index: 5;
 
         .input {
             position: relative;
